# race-game

./: .gitignore  Cargo.toml  README.md  about.hbs  about.toml  deny.toml  index.html
res/: credits.txt  levels.toml  solutions.toml
src/: combine.rs  course.rs  direction.rs  input.rs  level.rs  lib.rs  main.rs  path.rs  playback.rs  save.rs  selection.rs  simulator.rs  states.rs  test.rs  tile.rs  tooltip.rs  tracker.rs
src/ui/: credits.rs  edit.rs  export.rs  graphics.rs  gui.rs  home.rs  input.rs  loader.rs  menu.rs  mod.rs  race.rs  replay.rs  screen.rs  settings.rs
