[package]
name = "race"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only AND CC-BY-SA-4.0"

[dependencies]
notan = { git = "https://github.com/dgulotta/notan.git", features = ["egui","extra","serde"], branch = "egui-serde"}
serde = { version = "1.0.214", features = ["rc"] }
toml = "0.8.19"
strum = { version ="0.26.3", features = ["derive"] }
takeable = "0.2.2"
enum-map = { version = "2.7.3", features = ["serde"] }
regex = "1.11.1"
rpds = { version = "1.1.0", features = ["serde"] }
hashbrown = "0.15.2"
archery = "1.1.0"
egui-file-dialog = "0.9"
png = "0.17.16"
anyhow = "1.0.95"
indexmap = { version = "2.7.1", features = ["serde"] }
serde_default = "0.2.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
bevy_pkv = { version = "0.11.1", default-features=false, features=["redb"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
bevy_pkv = { version = "0.11.1", default-features=false }
rmp-serde = "1.1.0"
base64 = "0.22.1"
wasm-bindgen = { version = "0.2", default-features=false }
js-sys = "0.3.76"
web-sys = { version = "0.3.76", features = ["Blob","Document","Element","HtmlAnchorElement","Url","Window"] }

[features]
debug = []
